--- a/parts/timelapse.tex
+++ b/parts/timelapse.tex
@@ -207,7 +207,7 @@ This maybe frowned upon in certain circles due to the error prone nature of usin
 
 Scheduled events are events that have been schedules to run at specific times. They are often used to automate system daemons, but can also be acessed by the user to run scripts or programs at specific times.
 
-\subsection{Cron}
+\subsection{Cron}\label{cronalarm}
 In Linux 'cron' is the job scheduler, and it performs its operations by reading from a 'crontab' file which is a configuration file detailing the date and frequency, and job-specific detail of the job.
 
 Cron jobs are prepended by an intuitive 5 character sequence which is used to define the date and frequency via:\\
