--- a/write_up.tex
+++ b/write_up.tex
@@ -100,21 +100,35 @@ Morphological image processing techniques were adopted upon frames captured by t
 \pagebreak
 \tableofcontents
 \begin{center}
-\vspace*{\fill}\small{\bf This report is dedicated to ‘deed’ on the Maemo forums}
+\vspace*{\fill}
+{\bf Acknowledgements}\\
 \end{center}
-%This is awesome! It automaticaly generates a TOC depending on the part,section,subsection structure declared below!
+I would like to thank the following people:
+	\begin{description}
+	\item At UCL:
+		\begin{description}
+		\item [Robin Hirsch] For being stunningly flexible with my project idea, and for being incredibly helpful in finding me a secondary supervisor.
+		\item [Fabrizio Pece] For the great discussions and the very detailed guidance into all aspects of the project, notably the motion detection parts.
+		\end{description}
+	\item At Home:
+		\begin{description}
+		\item [Family] For being notably patient and forgiving with my odd schedules and moods.
+		\item [‘deed’] For being the first user on the Maemo forum to test my application upon release, and the glowing review he gave it.
+		\end{description}		
+	\end{description}
+\let\thefootnote\relax\footnote{\underline{Note:} This write up contains colors that are best viewed from the PDF file on the CD}
 \pagebreak
 
-\import{parts/}{background.tex}
+%\import{parts/}{background.tex}
 %\import{parts/}{motiondetect.tex}
 %\import{parts/}{timelapse.tex}
 %\import{parts/}{ipstreamer.tex}
 %\import{parts/}{userinterfaces.tex}
 %\import{parts/}{release.tex}
 
-%\part{Bibliography}
+\part{Bibliography}
 
-%\import{parts/}{appendix.tex}
+\import{parts/}{appendix.tex}
 
 \end{document}
 
