--- a/parts/appendix.tex
+++ b/parts/appendix.tex
@@ -180,6 +180,8 @@ If no target has been set up, then go to Tools... Options... select the Linux De
 \section{Tables}
 \import{tables/}{normalised_subtracted_image_size.tex}
 
+\section{Tests}\label{append:tests}
+
 
 \section{Application Code}
 \subsection{Motion Detector}
